# colombian-bird-song-identifier

./: .gitignore  BACKEND.md  CHANGELOG.md  LICENSE  PREPROCESSING_CONTEXT.md  README.md  card.py  fetch_metadata.py.retired  filter_species.py.retired  model.py  pre-processing.ipynb  pre_processing.ipynb  pre_processing.ipynb.retired  predict.py  recorder.py  requirements.txt  train.ipynb
apps/web/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx
apps/web/src/components/: ResultCard.tsx  Waveform.tsx
apps/web/src/lib/: api.ts  types.ts  useRecorder.ts
bird_models/: colombian_birds_O.json  label_map.json
infra/docker/: docker-compose.dev.yml
infra/scripts/: make_sample_wav.py  seed_cards.py
libs/contracts/: pyproject.toml
libs/contracts/contracts/: __init__.py  models.py
services/audio-recorder-agent/: Dockerfile  requirements.txt
services/audio-recorder-agent/app/: main.py
services/bird-identifier-agent/: Dockerfile  requirements.txt
services/bird-identifier-agent/app/: main.py  model.py
services/bird-identifier-agent/tests/: conftest.py  test_model.py
services/bird-index-agent/: Dockerfile  requirements.txt
services/bird-index-agent/app/: clients.py  config.py  db.py  main.py  orchestrator.py
services/bird-index-agent/tests/: test_orchestrator.py
services/birddex-mcp-agent/: Dockerfile  requirements.txt
services/birddex-mcp-agent/app/: main.py
shared/: __init__.py
shared/preprocessing/: __init__.py  audio.py
(+1 files in other folders)
