[project]
name = "cbsi-contracts"
version = "0.1.0"
description = "Shared Pydantic contracts for the Colombian Bird Song Identifier"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["contracts"]
